--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
+    "date-time": "^4.0.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
+    "flatpickr": "^4.6.13",
+    "flowbite-datepicker": "^1.2.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -31,7 +34,8 @@
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.3",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
