--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.3",
