--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "testEnvironment": "node",
+  "transformIgnorePatterns": [
+    "/node_modules/",
+    "\\.pnp\\.[^\\/]+$"
+  ],
   "scripts": {
     "dev": "vite",
+    "test": "jest --config=jest.config.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -17,24 +23,30 @@
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
     "date-time": "^4.0.0",
+    "dotenv": "^16.4.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
     "flatpickr": "^4.6.13",
     "flowbite-datepicker": "^1.2.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "msw": "^2.1.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-dropdown-select": "^4.11.1",
+    "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "redux": "^5.0.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.3",
@@ -42,17 +54,35 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0",
     "daisyui": "^4.6.0",
+    "dotenv-webpack": "^8.0.1",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "esm": "^3.2.25",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
+    "jsdom-global": "^3.0.2",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
     "vite": "^5.0.8"
   }
 }
