--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.1.1",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.17.19",
+    "ably": "^1.2.49",
     "axios": "^1.6.5",
     "date-time": "^4.0.0",
     "dotenv": "^16.4.1",
@@ -33,12 +34,14 @@
     "msw": "^2.1.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chat-elements": "^12.0.13",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-dropdown-select": "^4.11.1",
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^9.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.21.2",
