--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ably": "^1.2.49",
     "axios": "^1.6.5",
     "date-time": "^4.0.0",
+    "den": "^0.0.0",
     "dotenv": "^16.4.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
